<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <GVL Name="GVL_IO" Id="{e6b1b903-2532-418d-933f-72b936c64358}">
    <Declaration><![CDATA[VAR_GLOBAL
	/// AMS NetID
	g_aEcatMaster1 AT %I* : AMSNETID;	

	(* Generic PLC Rail *)
	i_iR46_40el3064s01c01 AT %I*: INT;
	i_iR46_40el3064s01c02 AT %I*: INT;
	i_iR46_40el3064s01c03 AT %I*: INT;
	i_iR46_40el3064s01c04 AT %I*: INT;

	i_xR46_40el1008s02c01 AT %I*: BOOL;
	i_xR46_40el1008s02c02 AT %I*: BOOL;
	i_xR46_40el1008s02c03 AT %I*: BOOL;
	i_xR46_40el1008s02c04 AT %I*: BOOL;
	i_xR46_40el1008s02c05 AT %I*: BOOL;
	i_xR46_40el1008s02c06 AT %I*: BOOL;
	i_xR46_40el1008s02c07 AT %I*: BOOL;
	i_xR46_40el1008s02c08 AT %I*: BOOL;
	
	q_xR46_40el2008s03c01 AT %Q*: BOOL;
	q_xR46_40el2008s03c02 AT %Q*: BOOL;
	q_xR46_40el2008s03c03 AT %Q*: BOOL;
	q_xR46_40el2008s03c04 AT %Q*: BOOL;
	q_xR46_40el2008s03c05 AT %Q*: BOOL;
	q_xR46_40el2008s03c06 AT %Q*: BOOL;
	q_xR46_40el2008s03c07 AT %Q*: BOOL;
	q_xR46_40el2008s03c08 AT %Q*: BOOL;
	
	q_xR46_40el2798s04c01 AT %Q*: BOOL;
	q_xR46_40el2798s04c02 AT %Q*: BOOL;
	q_xR46_40el2798s04c03 AT %Q*: BOOL;
	q_xR46_40el2798s04c04 AT %Q*: BOOL;
	q_xR46_40el2798s04c05 AT %Q*: BOOL;
	q_xR46_40el2798s04c06 AT %Q*: BOOL;
	q_xR46_40el2798s04c07 AT %Q*: BOOL;

	(* Hutch 4 stand SB2 *)
	i_iSB2_EB1_ep3174c01 AT %I* : INT;
	i_iSB2_EB1_ep3174c02 AT %I* : INT;
	i_iSB2_EB1_ep3174c03 AT %I* : INT;
	i_iSB2_EB1_ep3174c04 AT %I* : INT;
	
	q_xSB2_EB2_ep2624c01 AT %Q* : BOOL;
	q_xSB2_EB2_ep2624c02 AT %Q* : BOOL;
	q_xSB2_EB2_ep2624c03 AT %Q* : BOOL;
	q_xSB2_EB2_ep2624c04 AT %Q* : BOOL;
	
		(* Hutch 4.5 stand DG1 *)
	i_xDG1_EB1_ep2338c01 AT %I* : BOOL;
	i_xDG1_EB1_ep2338c02 AT %I* : BOOL;
	q_xDG1_EB1_ep2338c03 AT %Q* : BOOL;
	q_xDG1_EB1_ep2338c04 AT %Q* : BOOL;
	i_xDG1_EB1_ep2338c05 AT %I* : BOOL;
	i_xDG1_EB1_ep2338c06 AT %I* : BOOL;
	q_xDG1_EB1_ep2338c07 AT %Q* : BOOL;
	q_xDG1_EB1_ep2338c08 AT %Q* : BOOL;
	
	i_iDG1_EB2_ep3174c01 AT %I* : INT;
	i_iDG1_EB2_ep3174c02 AT %I* : INT;
	i_iDG1_EB2_ep3174c03 AT %I* : INT;
	i_iDG1_EB2_ep3174c04 AT %I* : INT;
	
	q_xDG1_EB3_ep2624c01 AT %Q* : BOOL;
	q_xDG1_EB3_ep2624c02 AT %Q* : BOOL;
	q_xDG1_EB3_ep2624c03 AT %Q* : BOOL;
	q_xDG1_EB3_ep2624c04 AT %Q* : BOOL;
	
	i_xDG1_EB4_ep2338c01 AT %I* : BOOL;
	i_xDG1_EB4_ep2338c02 AT %I* : BOOL;
	q_xDG1_EB4_ep2338c03 AT %Q* : BOOL;
	q_xDG1_EB4_ep2338c04 AT %Q* : BOOL;
	i_xDG1_EB4_ep2338c05 AT %I* : BOOL;
	i_xDG1_EB4_ep2338c06 AT %I* : BOOL;
	q_xDG1_EB4_ep2338c07 AT %Q* : BOOL;
	q_xDG1_EB4_ep2338c08 AT %Q* : BOOL;
	
	
			(* Hutch 4.5 stand DG2 *)
	i_xDG2_EB1_ep2338c01 AT %I* : BOOL;
	i_xDG2_EB1_ep2338c02 AT %I* : BOOL;
	q_xDG2_EB1_ep2338c03 AT %Q* : BOOL;
	q_xDG2_EB1_ep2338c04 AT %Q* : BOOL;
	i_xDG2_EB1_ep2338c05 AT %I* : BOOL;
	i_xDG2_EB1_ep2338c06 AT %I* : BOOL;
	q_xDG2_EB1_ep2338c07 AT %Q* : BOOL;
	q_xDG2_EB1_ep2338c08 AT %Q* : BOOL;
	
	i_iDG2_EB2_ep3174c01 AT %I* : INT;
	i_iDG2_EB2_ep3174c02 AT %I* : INT;
	i_iDG2_EB2_ep3174c03 AT %I* : INT;
	i_iDG2_EB2_ep3174c04 AT %I* : INT;
	
	q_xDG2_EB3_ep2624c01 AT %Q* : BOOL;
	q_xDG2_EB3_ep2624c02 AT %Q* : BOOL;
	q_xDG2_EB3_ep2624c03 AT %Q* : BOOL;
	q_xDG2_EB3_ep2624c04 AT %Q* : BOOL;
	
	
	(* XRT stand 62 *)
	i_xS62_EB1_ep2338c01 AT %I* : BOOL;
	i_xS62_EB1_ep2338c02 AT %I* : BOOL;
	q_xS62_EB1_ep2338c03 AT %Q* : BOOL;
	q_xS62_EB1_ep2338c04 AT %Q* : BOOL;
	i_xS62_EB1_ep2338c05 AT %I* : BOOL;
	i_xS62_EB1_ep2338c06 AT %I* : BOOL;
	q_xS62_EB1_ep2338c07 AT %Q* : BOOL;
	q_xS62_EB1_ep2338c08 AT %Q* : BOOL;	

	(* XRT stand 72 *)
	i_xS72_EB1_ep2338c01 AT %I* : BOOL;
	i_xS72_EB1_ep2338c02 AT %I* : BOOL;
	q_xS72_EB1_ep2338c03 AT %Q* : BOOL;
	q_xS72_EB1_ep2338c04 AT %Q* : BOOL;
	i_xS72_EB1_ep2338c05 AT %I* : BOOL;
	i_xS72_EB1_ep2338c06 AT %I* : BOOL;
	q_xS72_EB1_ep2338c07 AT %Q* : BOOL;
	q_xS72_EB1_ep2338c08 AT %Q* : BOOL;
	
	i_iS72_EB2_ep3174c01 AT %I* : INT;
	i_iS72_EB2_ep3174c02 AT %I* : INT;
	i_iS72_EB2_ep3174c03 AT %I* : INT;
	i_iS72_EB2_ep3174c04 AT %I* : INT;
	
	q_xS72_EB3_ep2624c01 AT %Q* : BOOL;
	q_xS72_EB3_ep2624c02 AT %Q* : BOOL;
	q_xS72_EB3_ep2624c03 AT %Q* : BOOL;
	q_xS72_EB3_ep2624c04 AT %Q* : BOOL;

	(* XRT stand 30 *)
	i_iS30_EB1_ep3174c01 AT %I* : INT;
	i_iS30_EB1_ep3174c02 AT %I* : INT;
	i_iS30_EB1_ep3174c03 AT %I* : INT;
	i_iS30_EB1_ep3174c04 AT %I* : INT;
	
	q_xS30_EB2_ep2624c01 AT %Q* : BOOL;
	q_xS30_EB2_ep2624c02 AT %Q* : BOOL;
	q_xS30_EB2_ep2624c03 AT %Q* : BOOL;
	q_xS30_EB2_ep2624c04 AT %Q* : BOOL;
		
	(* XRT stand 27 *)
	i_iS27_EB1_ep3174c01 AT %I* : INT;
	i_iS27_EB1_ep3174c02 AT %I* : INT;
	i_iS27_EB1_ep3174c03 AT %I* : INT;
	i_iS27_EB1_ep3174c04 AT %I* : INT;
	
	q_xS27_EB2_ep2624c01 AT %Q* : BOOL;
	q_xS27_EB2_ep2624c02 AT %Q* : BOOL;
	q_xS27_EB2_ep2624c03 AT %Q* : BOOL;
	q_xS27_EB2_ep2624c04 AT %Q* : BOOL;


	(* XRT stand 26 *)
	i_xS26_EB1_ep2338c01 AT %I* : BOOL;
	i_xS26_EB1_ep2338c02 AT %I* : BOOL;
	q_xS26_EB1_ep2338c03 AT %Q* : BOOL;
	q_xS26_EB1_ep2338c04 AT %Q* : BOOL;
	i_xS26_EB1_ep2338c05 AT %I* : BOOL;
	i_xS26_EB1_ep2338c06 AT %I* : BOOL;
	q_xS26_EB1_ep2338c07 AT %Q* : BOOL;
	q_xS26_EB1_ep2338c08 AT %Q* : BOOL;			

	
	(* XRT stand 20 *)
	i_iS20_EB1_ep3174c01 AT %I* : INT;
	i_iS20_EB1_ep3174c02 AT %I* : INT;
	i_iS20_EB1_ep3174c03 AT %I* : INT;
	i_iS20_EB1_ep3174c04 AT %I* : INT;
	
	q_xS20_EB2_ep2624c01 AT %Q* : BOOL;
	q_xS20_EB2_ep2624c02 AT %Q* : BOOL;
	q_xS20_EB2_ep2624c03 AT %Q* : BOOL;
	q_xS20_EB2_ep2624c04 AT %Q* : BOOL;
	
	(* XRT stand 14 *)
	i_xS14_EB1_ep2338c01 AT %I* : BOOL;
	i_xS14_EB1_ep2338c02 AT %I* : BOOL;
	q_xS14_EB1_ep2338c03 AT %Q* : BOOL;
	q_xS14_EB1_ep2338c04 AT %Q* : BOOL;
	i_xS14_EB1_ep2338c05 AT %I* : BOOL;
	i_xS14_EB1_ep2338c06 AT %I* : BOOL;
	q_xS14_EB1_ep2338c07 AT %Q* : BOOL;
	q_xS14_EB1_ep2338c08 AT %Q* : BOOL;	
	
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>