<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="p_SoftIOMap" Id="{29b29fdd-af3a-4f5d-979b-0ec37006ef74}">
    <Declaration><![CDATA[PROGRAM p_SoftIOMap
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[	(* Generic PLC Rail *)
//	i_iR46_40el3064s01c01 AT %I*: INT;
//	i_iR46_40el3064s01c02 AT %I*: INT;
//	i_iR46_40el3064s01c03 AT %I*: INT;
//	i_iR46_40el3064s01c04 AT %I*: INT;

	i_xMFX_ppsStopperPos_In := i_xR46_40el1008s02c01;
	i_xMFX_ppsStopperPos_Out := i_xR46_40el1008s02c02;
//	i_xR46_40el1008s02c03 AT %I*: BOOL;
//	i_xR46_40el1008s02c04 AT %I*: BOOL;
//	i_xR46_40el1008s02c05 AT %I*: BOOL;
//	i_xR46_40el1008s02c06 AT %I*: BOOL;
//	i_xR46_40el1008s02c07 AT %I*: BOOL;
//	i_xR46_40el1008s02c08 AT %I*: BOOL;
	
	q_xR46_40el2008s03c01:= q_xMFX_MPSOK; //AT %Q*: BOOL;
//	q_xR46_40el2008s03c02 AT %Q*: BOOL;
//	q_xR46_40el2008s03c03 AT %Q*: BOOL;
//	q_xR46_40el2008s03c04 AT %Q*: BOOL;
//	q_xR46_40el2008s03c05 AT %Q*: BOOL;
//	q_xR46_40el2008s03c06 AT %Q*: BOOL;
//	q_xR46_40el2008s03c07 AT %Q*: BOOL;
//	q_xR46_40el2008s03c08 AT %Q*: BOOL;
	
//	q_xR46_40el2798s04c01 AT %Q*: BOOL;
//	q_xR46_40el2798s04c02 AT %Q*: BOOL;
//	q_xR46_40el2798s04c03 AT %Q*: BOOL;
//	q_xR46_40el2798s04c04 AT %Q*: BOOL;
//	q_xR46_40el2798s04c05 AT %Q*: BOOL;
//	q_xR46_40el2798s04c06 AT %Q*: BOOL;
//	q_xR46_40el2798s04c07 AT %Q*: BOOL;
//	q_xR46_40el2798s04c08 AT %Q*: BOOL;
//vgMXT_GCC_06 : ST_VG;


//vgcMXT_VGC_04 : ST_VGC;
	(* XRT stand 14 *)
	vgcMXT_VGC_04.i_xOpnLS := i_xS14_EB1_ep2338c01;
	vgcMXT_VGC_04.i_xClsLS := i_xS14_EB1_ep2338c02;
	q_xS14_EB1_ep2338c03 := vgcMXT_VGC_04.xOPN_DO;
	q_xS14_EB1_ep2338c04 := FALSE;
	i_xUSVacOK := i_xS14_EB1_ep2338c05; //AT %I* : BOOL;
//	i_xS14_EB1_ep2338c06 AT %I* : BOOL;
	q_xS14_EB1_ep2338c07 := FALSE;
	q_xS14_EB1_ep2338c08 := FALSE;	

	
	(* XRT stand 20 *)
	vgDVD_GCC_02.iPRESS_R := i_iS20_EB1_ep3174c01;
//	i_iS20_EB1_ep3174c02 AT %I* : INT;
//	i_iS20_EB1_ep3174c03 AT %I* : INT;
//	i_iS20_EB1_ep3174c04 AT %I* : INT;
	
	q_xS20_EB2_ep2624c01 := vgDVD_GCC_02.xHV_DIS;
	q_xS20_EB2_ep2624c02 := FALSE;
	q_xS20_EB2_ep2624c03 := FALSE;
	q_xS20_EB2_ep2624c04 := FALSE;
	

	(* XRT stand 26 *)
	vgcDVD_VGC_01.i_xOpnLS := i_xS26_EB1_ep2338c01;
	vgcDVD_VGC_01.i_xClsLS := i_xS26_EB1_ep2338c02;
	q_xS26_EB1_ep2338c03 := vgcDVD_VGC_01.xOPN_DO;
	q_xS26_EB1_ep2338c04 := FALSE;
//	i_xS26_EB1_ep2338c05 AT %I* : BOOL;
//	i_xS26_EB1_ep2338c06 AT %I* : BOOL;
	q_xS26_EB1_ep2338c07 := FALSE;
	q_xS26_EB1_ep2338c08 := FALSE;	
	
	(* XRT stand 27 *)
	vgDVD_GCC_04.iPRESS_R := i_iS27_EB1_ep3174c01;
//	i_iS27_EB1_ep3174c02 AT %I* : INT;
//	i_iS27_EB1_ep3174c03 AT %I* : INT;
//	i_iS27_EB1_ep3174c04 AT %I* : INT;
	
	q_xS27_EB2_ep2624c01 := vgDVD_GCC_04.xHV_DIS;
	q_xS27_EB2_ep2624c02 := FALSE;
	q_xS27_EB2_ep2624c03 := FALSE;
	q_xS27_EB2_ep2624c04 := FALSE;
	
	(* XRT stand 30 *)
	vgMON_GCC_01.iPRESS_R := i_iS30_EB1_ep3174c01;
//	i_iS30_EB1_ep3174c02 AT %I* : INT;
//	i_iS30_EB1_ep3174c03 AT %I* : INT;
//	i_iS30_EB1_ep3174c04 AT %I* : INT;
	
	q_xS30_EB2_ep2624c01 := vgMON_GCC_01.xHV_DIS;
	q_xS30_EB2_ep2624c02 := FALSE;
	q_xS30_EB2_ep2624c03 := FALSE;
	q_xS30_EB2_ep2624c04 := FALSE;
	
		
	(* XRT stand 72 *)
	vgcDIA_VGC_01.i_xOpnLS := i_xS72_EB1_ep2338c01; //AT %I* : BOOL;
	vgcDIA_VGC_01.i_xClsLS := i_xS72_EB1_ep2338c02; //AT %I* : BOOL;
	q_xS72_EB1_ep2338c03 := vgcDIA_VGC_01.xOPN_DO; //AT %Q* : BOOL;
	q_xS72_EB1_ep2338c04 := FALSE; //AT %Q* : BOOL;
//	i_xS72_EB1_ep2338c05 AT %I* : BOOL;
//	i_xS72_EB1_ep2338c06 AT %I* : BOOL;
	q_xS72_EB1_ep2338c07 := FALSE; //AT %Q* : BOOL;
	q_xS72_EB1_ep2338c08 := FALSE; // AT %Q* : BOOL;
	
	vgDIA_GCC_01.iPRESS_R := i_iS72_EB2_ep3174c01;
//	i_iS72_EB2_ep3174c02 AT %I* : INT;
//	i_iS72_EB2_ep3174c03 AT %I* : INT;
//	i_iS72_EB2_ep3174c04 AT %I* : INT;
	
	q_xS72_EB3_ep2624c01 := vgDIA_GCC_01.xHV_DIS;
	q_xS72_EB3_ep2624c02 := FALSE;
	q_xS72_EB3_ep2624c03 := FALSE;
	q_xS72_EB3_ep2624c04 := FALSE;
	

	(* XRT stand 62 *)
	vgcDIA_VGC_02.i_xOpnLS := i_xS62_EB1_ep2338c01; // AT %I* : BOOL;
	vgcDIA_VGC_02.i_xClsLS := i_xS62_EB1_ep2338c02; // AT %I* : BOOL;
	q_xS62_EB1_ep2338c03 := vgcDIA_VGC_02.xOPN_DO; // AT %Q* : BOOL;
	q_xS62_EB1_ep2338c04 := FALSE; // AT %Q* : BOOL;
//	i_xS62_EB1_ep2338c05 AT %I* : BOOL;
//	i_xS62_EB1_ep2338c06 AT %I* : BOOL;
	q_xS62_EB1_ep2338c07 := FALSE; //  AT %Q* : BOOL;
	q_xS62_EB1_ep2338c08 := FALSE; //  AT %Q* : BOOL;
	

	(* XCS stand SB2 *)
	vgSB2_GCC_01.iPRESS_R := i_iSB2_EB1_ep3174c01;
//	i_iS30_EB1_ep3174c02 AT %I* : INT;
//	i_iS30_EB1_ep3174c03 AT %I* : INT;
//	i_iS30_EB1_ep3174c04 AT %I* : INT;
	
	q_xSB2_EB2_ep2624c01 := vgSB2_GCC_01.xHV_DIS;
	q_xS30_EB2_ep2624c02 := FALSE;
	q_xS30_EB2_ep2624c03 := FALSE;
	q_xS30_EB2_ep2624c04 := FALSE;
	
	(* Hutch4.5 stand DG1 *)
	vgcDG1_VGC_01.i_xOpnLS := i_xDG1_EB1_ep2338c01; //AT %I* : BOOL;
	vgcDG1_VGC_01.i_xClsLS := i_xDG1_EB1_ep2338c02; //AT %I* : BOOL;
	q_xDG1_EB1_ep2338c03 := vgcDG1_VGC_01.xOPN_DO; //AT %Q* : BOOL;
	q_xDG1_EB1_ep2338c04 := FALSE; //AT %Q* : BOOL;
	vgcDG1_VGC_02.i_xOpnLS := i_xDG1_EB1_ep2338c05; //AT %I* : BOOL;
	vgcDG1_VGC_02.i_xClsLS := i_xDG1_EB1_ep2338c06; // AT %I* : BOOL;
	q_xDG1_EB1_ep2338c07 := vgcDG1_VGC_02.xOPN_DO; //AT %Q* : BOOL;
	q_xDG1_EB1_ep2338c08 := FALSE; // AT %Q* : BOOL;
	
	vgDG1_GCC_01.iPRESS_R := i_iDG1_EB2_ep3174c01;
//	i_iDG1_EB2_ep3174c02 AT %I* : INT;
	vgDG2_GCC_01.iPRESS_R := i_iDG1_EB2_ep3174c02;
//	i_iDG1_EB2_ep3174c03 AT %I* : INT;
//	i_iDG1_EB2_ep3174c04 AT %I* : INT;
	
	q_xDG1_EB3_ep2624c01 := vgDG1_GCC_01.xHV_DIS;
	q_xDG1_EB3_ep2624c02 := vgDG2_GCC_01.xHV_DIS;
//	q_xDG1_EB3_ep2624c02 := FALSE;
	q_xDG1_EB3_ep2624c03 := FALSE;
	q_xDG1_EB3_ep2624c04 := FALSE;
	
	
	i_xDG1_MMS01_IN := i_xDG1_EB4_ep2338c01; // AT %I* : BOOL;
	i_xDG1_MMS01_OUT := i_xDG1_EB4_ep2338c02; // AT %I* : BOOL;
	q_xDG1_EB4_ep2338c03 := FALSE; // AT %Q* : BOOL;
	q_xDG1_EB4_ep2338c04 := FALSE; //AT %Q* : BOOL;
//	i_xDG1_EB4_ep2338c05 AT %I* : BOOL;
//	i_xDG1_EB4_ep2338c06 AT %I* : BOOL;
	q_xDG1_EB4_ep2338c07 := FALSE; //AT %Q* : BOOL;
	q_xDG1_EB4_ep2338c08 := FALSE; //AT %Q* : BOOL;
	
	
	
		(* Hutch4.5 stand DG2 *)
//	vgcDG2_VGC_01.i_xOpnLS := i_xDG2_EB1_ep2338c01; //AT %I* : BOOL;
//	vgcDG2_VGC_01.i_xClsLS := i_xDG2_EB1_ep2338c02; //AT %I* : BOOL;
//	q_xDG2_EB1_ep2338c03 := vgcDG2_VGC_01.xOPN_DO; //AT %Q* : BOOL;
	q_xDG2_EB1_ep2338c03 := FALSE; //AT %Q* : BOOL;
	q_xDG2_EB1_ep2338c04 := FALSE; //AT %Q* : BOOL;
//	i_xDG2_EB1_ep2338c05 AT %I* : BOOL;
//	i_xDG2_EB1_ep2338c06 AT %I* : BOOL;
	q_xDG2_EB1_ep2338c07 := FALSE; //AT %Q* : BOOL;
	q_xDG2_EB1_ep2338c08 := FALSE; // AT %Q* : BOOL;
	
//	vgDG2_GCC_01.iPRESS_R := i_iDG2_EB2_ep3174c01;
//	i_iDG2_EB2_ep3174c02 AT %I* : INT;
//	i_iDG2_EB2_ep3174c03 AT %I* : INT;
//	i_iDG2_EB2_ep3174c04 AT %I* : INT;
	
//	q_xDG2_EB3_ep2624c01 := vgDG2_GCC_01.xHV_DIS; //AT %Q* : BOOL;
	q_xDG2_EB3_ep2624c02 := FALSE; //AT %Q* : BOOL;
	q_xDG2_EB3_ep2624c03 := FALSE; //AT %Q* : BOOL;
	q_xDG2_EB3_ep2624c04 := FALSE; //AT %Q* : BOOL;]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>